--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: 'update schedule'
 
 on:
   schedule:
-    - cron: '0 */12 * * *'
+    - cron: '0 1,3,5,7,9,12,15,18,21,23 * * *'
   workflow_dispatch:
     branches:
       - master
