--- a/.github/workflows/listtv.yml
+++ b/.github/workflows/listtv.yml
@@ -47,8 +47,7 @@ jobs:
         
       - name: Run hotel_ipname_dq
         run: |
-          python ${{ github.workspace }}/hotel_ipname_dq.py
-        working-directory: /path/to/bywork
+          python ${{ github.workspace }}/bywork/hotel_ipname_dq.py
         
       - name: 提交更改
         run: |
