--- a/.github/workflows/listtv.yml
+++ b/.github/workflows/listtv.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Run hotel_ipname_dq
         run: |
           python ${{ github.workspace }}/bywork/hotel_ipname_dq.py
-        working-directory: ${{ github.workspace }}/bywork
+        working-directory: ${{ github.workspace }}/data
         
       - name: 提交更改
         run: |
