--- a/.github/workflows/listtv.yml
+++ b/.github/workflows/listtv.yml
@@ -45,9 +45,26 @@ jobs:
           pip install selenium requests futures eventlet
           pip install beautifulsoup4
         
-      - name: Run hotel_ipname_dq
-        run: python ${{ github.workspace }}/bywork/hotel_ipname_dq.py
+      # - name: Run hotel_ipname_dq
+      #   run: python ${{ github.workspace }}/bywork/hotel_ipname_dq.py
         
+      - name: Run cctv
+        run: python ${{ github.workspace }}/bywork/cctv.py
+          
+      - name: Run weishi
+        run: python ${{ github.workspace }}/bywork/weishi.py
+          
+      - name: Run ktpd
+        run: python ${{ github.workspace }}/bywork/ktpd.py
+          
+      - name: Run ysyl
+        run: python ${{ github.workspace }}/bywork/ysyl.py
+             
+      - name: Run qita
+        run: python ${{ github.workspace }}/bywork/qita.py
+        
+      - name: Run tv570
+        run: python ${{ github.workspace }}/bywork/tv570.py
       - name: 提交更改
         run: |
           git config --local user.name "xzw832" 
