--- a/.github/workflows/listtv.yml
+++ b/.github/workflows/listtv.yml
@@ -67,8 +67,8 @@ jobs:
         run: python ${{ github.workspace }}/bywork/tv570.py
       - name: 提交更改
         run: |
-          git config --local user.name "xzw832" 
-          git config --local user.email "g832@x-zw.com"
+          git config --local user.name "listving" 
+          git config --local user.email "52348899@qq.com"
           git add .
           git commit *.txt -m "Add generated file"
           git push -f
