--- a/.github/workflows/check-video-source.yml
+++ b/.github/workflows/check-video-source.yml
@@ -1,9 +1,8 @@
 name: Check Video Source
 
 on:
-  # 例如，你可以在push到master分支时触发这个工作流
-  push:
-    branches: [ master ]
+  # 手动运行
+  workflow_dispatch:
 
 jobs:
   check-video:
@@ -25,6 +24,6 @@ jobs:
 
     - name: Check video source
       env:
-        VIDEO_URL: "your_video_url_here"  # 设置环境变量，这将传递给脚本
+        VIDEO_URL: "http://59.55.35.219:20000/hls/1/index.m3u8"  # 设置环境变量，这将传递给脚本
       run: |
         python check_video_source.py "$VIDEO_URL"  # 执行Python脚本并传递视频URL作为参数
