--- a/.github/workflows/check-video-source.yml
+++ b/.github/workflows/check-video-source.yml
@@ -20,7 +20,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install ffmpeg-python  # 如果需要的话，安装ffmpeg-python库
+        
+    - name: Install FFmpeg
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y ffmpeg
 
     - name: Check video source
       env:
