--- a/.github/workflows/check-video-source.yml
+++ b/.github/workflows/check-video-source.yml
@@ -28,4 +28,4 @@ jobs:
 
     - name: Check video source
       run: |
-        check_video_source.py  # 执行Python脚本并传递视频URL作为参数
+         python ${{ github.workspace }}/check_video_source.py  # 执行Python脚本并传递视频URL作为参数
