--- a/.github/workflows/check-video-source.yml
+++ b/.github/workflows/check-video-source.yml
@@ -28,5 +28,5 @@ jobs:
 
     - name: Check video source
       run: |
-         python ${{ github.workspace }}/test_ffmpeg.py  # 执行Python脚本并传递视频URL作为参数
+         python ${{ github.workspace }}/ip_qianxin.py  # 执行Python脚本并传递视频URL作为参数
 
