--- a/.github/workflows/check-video-source.yml
+++ b/.github/workflows/check-video-source.yml
@@ -34,7 +34,7 @@ jobs:
 
     - name: Check video source
       run: |
-         python ${{ github.workspace }}/ip_qianxin.py  # 执行Python脚本
+         python ${{ github.workspace }}/test_ffmpeg.py  # 执行Python脚本
          
     - name: 提交更改
       run: |
