--- a/.github/workflows/replay_supported.yml
+++ b/.github/workflows/replay_supported.yml
@@ -51,5 +51,5 @@ jobs:
           sudo apt-get install -y ffmpeg
           
       - name: Run bit.py
-        run: python ${{ github.workspace }}/cctv.py
+        run: python ${{ github.workspace }}/bit.py
         
