--- a/.github/workflows/replay_supported.yml
+++ b/.github/workflows/replay_supported.yml
@@ -52,5 +52,5 @@ jobs:
           sudo apt-get install -y ffmpeg
           
       - name: Run bit.py
-        run: python ${{ github.workspace }}/bit_01.py
+        run: python ${{ github.workspace }}/cctv.py
         
