--- a/.github/workflows/listtv.yml
+++ b/.github/workflows/listtv.yml
@@ -44,7 +44,8 @@ jobs:
           pip install selenium requests futures eventlet
           pip install beautifulsoup4
           pip install chardet
-
+          pip install opencv-python opencv-python-headless
+          
       - name: Install FFmpeg
         run: |
           sudo apt-get update
