--- a/.github/workflows/listtv.yml
+++ b/.github/workflows/listtv.yml
@@ -1,7 +1,7 @@
 name: Seek cctv setup
 on:
-  # schedule:
-  #   - cron: '0 3,7,11,15,19,23 * * *'  #时区+8
+  schedule:
+    - cron: '0 3,7,11,15,19,23 * * *'  #时区+8
   # 手动运行
   workflow_dispatch:
 
